@@ -98,9 +98,12 @@
                     </Component>
                     <Component class="javax.swing.JComboBox" name="subjectTable">
                       <Properties>
-                        <Property name="maximumRowCount" type="int" value="32"/>
+                        <Property name="maximumRowCount" type="int" value="24"/>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                           <Connection code="subjectListModel()" type="code"/>
+                        </Property>
+                        <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                          <Dimension value="[150, 19]"/>
                         </Property>
                       </Properties>
                       <Events>
@@ -316,9 +319,12 @@
                         </Component>
                         <Component class="javax.swing.JComboBox" name="rootTable">
                           <Properties>
-                            <Property name="maximumRowCount" type="int" value="32"/>
+                            <Property name="maximumRowCount" type="int" value="24"/>
                             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                               <Connection code="getTableListModel()" type="code"/>
+                            </Property>
+                            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                              <Dimension value="[150, 19]"/>
                             </Property>
                           </Properties>
                           <Events>
